# ash-aggregator-sc

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  mxpy.data-storage.json
check_slippage/: Move.toml
check_slippage/sources/: check_slippage.move
check_slippage/tests/: another_my_coin.move  check_slippage_tests.move  mycoin.move
common/errors/: Cargo.toml
common/structs/: Cargo.toml
common/token_send/: Cargo.toml
dex/: Cargo.toml
dex/aggregator/: Cargo.toml
dex/aggregator/meta/: Cargo.toml
dex/aggregator/src/: lib.rs
dex/aggregator/wasm/: Cargo.toml
dex/aggregator/wasm/src/: lib.rs
dex/fee/: Cargo.toml
dex/fee/meta/: Cargo.toml
dex/fee/meta/src/: main.rs
dex/fee/scenarios/: fee.scen.json
dex/fee/src/: fee.rs
dex/fee/tests/: fee_scenario_go_test.rs  fee_scenario_rs_test.rs
dex/fee/wasm/: Cargo.toml
dex/fee/wasm/src/: lib.rs
dex/tests/: aggregator_test.rs  dex_test.rs
dex/tests/protocol_mock/: mod.rs
dex/wrapper-mock/: Cargo.toml
dex/wrapper-mock/meta/: Cargo.toml
dex/wrapper-mock/meta/src/: main.rs
dex/wrapper-mock/src/: lib.rs
dex/wrapper-mock/wasm/: Cargo.toml
dex/wrapper-mock/wasm/src/: lib.rs
dex/wrapper_view/: Cargo.toml
dex/wrapper_view/meta/: Cargo.toml
dex/wrapper_view/meta/src/: main.rs
dex/wrapper_view/src/: lib.rs
dex/wrapper_view/src/ashswapv1/: mod.rs  proxy.rs
dex/wrapper_view/src/ashswapv2/: mod.rs  proxy.rs
dex/wrapper_view/src/hatom/: mod.rs  proxy.rs
dex/wrapper_view/src/hatomliquidstaking/: mod.rs  proxy.rs
dex/wrapper_view/src/jexexchange/: mod.rs  proxy.rs
dex/wrapper_view/src/onedex/: mod.rs  proxy.rs
dex/wrapper_view/src/tinder/: mod.rs  proxy.rs
dex/wrapper_view/src/xexchange/: mod.rs  proxy.rs
dex/wrapper_view/wasm/: Cargo.toml
dex/wrapper_view/wasm/src/: lib.rs
output-docker/: artifacts.json
output-docker/aggregator/: aggregator-0.0.0.source.json  aggregator.abi.json  aggregator.codehash.txt  aggregator.imports.json  aggregator.wasm
output-docker/wrapper-mock/: wrapper-mock-0.0.0.source.json  wrapper-mock.abi.json  wrapper-mock.codehash.txt  wrapper-mock.imports.json  wrapper-mock.wasm
scripts/: build.sh  clean.sh  deploy.sh  interaction.sh
scripts/mod/: aggregator.sh  encode.sh  fee.sh  load_env.sh  (+2 more)
(+4 files in other folders)
