[package]
name = "aggregator"
version = "0.0.0"
authors = ["Bicarus <hello@bicarus.io>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.common-errors]
path = "../../common/errors"

[dependencies.common-structs]
path = "../../common/structs"

[dependencies.token_send]
path = "../../common/token_send"

[dependencies.multiversx-sc]
version = "0.40.0"
features = ["esdt-token-payment-legacy-decode"]
