[package]
name = "fee"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/fee.rs"

[dependencies.multiversx-sc]
version = "0.47.5"
features = ["esdt-token-payment-legacy-decode"]

[dev-dependencies]
num-bigint = "0.4"

[dependencies.common-errors]
path = "../../common/errors"

[dependencies.common-structs]
path = "../../common/structs"

[dependencies.token_send]
path = "../../common/token_send"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.5"